# android-encfs

./: CMakeLists.txt  README.md
files/: encfs-1.9-rc1.patch  fuse-2.9.7.patch  openssl-build.sh
